# OJ

./: README.md
OpenJudge/: .dockerignore  .gitignore  ai.md  autoscaling.tf  celery.tf  deploy.sh  docker-compose.yml  dockerfile  local.sh  main.tf  pyproject.toml  rds.tf  run.py  sqs.tf
OpenJudge/app/: __init__.py  tasks.py
OpenJudge/app/models/: __init__.py  analysis_task.py  user.py
OpenJudge/app/problems/1/: testcases.txt
OpenJudge/app/problems/10/: testcases.txt
OpenJudge/app/problems/2/: testcases.txt
OpenJudge/app/problems/3/: testcases.txt
OpenJudge/app/problems/4/: testcases.txt
OpenJudge/app/problems/5/: testcases.txt
OpenJudge/app/problems/6/: testcases.txt
OpenJudge/app/problems/7/: testcases.txt
OpenJudge/app/problems/8/: testcases.txt
OpenJudge/app/problems/9/: testcases.txt
OpenJudge/app/routes/: auth.py  problems.py  routes.py  web_routes.py
OpenJudge/app/static/css/: custom.css
OpenJudge/app/templates/: base.html  homepage.html  problems.html  submit_form.html
OpenJudge/app/templates/auth/: login.html  register.html
OpenJudge/app/utils/: __init__.py  auth.py  judge.py  lab_validator.py  redis_client.py  s3.py  time_convert.py
OpenJudge/app/views/: analysis.py
OpenJudge/test/: README.md  auth_helper.py  cookies.txt  k6_config_example.js  k6_performance_test.js  run_performance_test.sh  test.sh  test_basic.py  test_judge_integration.py  test_validation.py
OpenJudge/test/performance_results/: openjudge_performance_20250608_050241.json
model/: openjudge_microservice.puml  openjudge_monolithic.puml
(+5 files in other folders)
